<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ver_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/r_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/r_rouge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rouge" />

            <RadioButton
                android:id="@+id/r_jaune"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jaune" />

            <RadioButton
                android:id="@+id/r_vert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vert" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2196F3"
            android:text="@string/edit_color" />

        <Button
            android:id="@+id/btn_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_color" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>