<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-91dp"
        tools:layout_editor_absoluteY="49dp">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="#00BCD4"
            android:text="@string/btn1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btn5"
            android:layout_marginStart="255dp"
            android:layout_marginTop="-40dp"
            android:text="@string/btn2"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/btn1"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="341dp"
            android:backgroundTint="#009688"
            android:text="@string/btn3"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/btn3"
            android:layout_alignEnd="@id/btn1"
            android:layout_marginTop="380dp"
            android:backgroundTint="#F44336"
            android:text="@string/btn4"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btn1"
            android:layout_alignBottom="@id/btn4"
            android:layout_marginStart="255dp"
            android:backgroundTint="#673AB7"
            android:text="@string/btn5"
            android:textColor="@color/white" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>