<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-161dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/title_poids_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:text="@string/n_poids"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_poids_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_toEndOf="@id/title_poids_r"
                android:hint="@string/poids"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_taille_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_relative"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:text="@string/n_taille"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textSize="20sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_below="@id/input_relative"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_taille_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_toEndOf="@id/title_taille_r"
                android:hint="@string/taille"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/input_relative2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp">

            <RadioButton
                android:id="@+id/r_metre_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/metre"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/r_centemtre_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/centimètre"
                android:textColor="#000000"
                android:textStyle="bold"
                android:checked="true" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_imc_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#E91E63"
            android:text="@string/calcul_imc"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_raz_r"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/btn_imc_r"
            android:backgroundTint="#FF5722"
            android:text="@string/raz"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/res_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_imc_r"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_res"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/msg_res_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/res_r"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/message_calcul"
            android:textColor="#000000" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>