<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEE"
        android:orientation="vertical"
        android:stretchColumns="1"
        android:shrinkColumns="0"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip" >

            <TextView
                android:id="@+id/title_poids_t"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/n_poids"
                android:textAlignment="center"
                android:textColor="#E91E63"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_poids_t"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/poids"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip" >

            <TextView
                android:id="@+id/title_taille_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/n_taille"
                android:textAlignment="center"
                android:textColor="#E91E63"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_taille_t"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/taille"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/r_metre_t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/metre"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/r_centemtre_t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/centimètre"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:checked="true" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip" >

            <Button
                android:id="@+id/btn_raz_t"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#FF5722"
                android:text="@string/raz"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_imc_t"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#E91E63"
                android:text="@string/calcul_imc"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip" >

            <TextView
                android:id="@+id/res_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_res"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip"
             >

            <TextView
                android:id="@+id/msg_res_t"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/message_calcul"
                android:textColor="#000000" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>